--- a/feature_one/src/main/AndroidManifest.xml
+++ b/feature_one/src/main/AndroidManifest.xml
@@ -2,4 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dev.wendyyanto.feature_one">
 
+    <application>
+        <activity android:name=".FeatureOneActivity" />
+    </application>
 </manifest>
