--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     implementation project(":router")
+    implementation project(":feature_one")
+    implementation project(":feature_two")
 
     // Dagger
     implementation "com.google.dagger:dagger:$daggerVersion"
