--- a/feature_two/src/main/AndroidManifest.xml
+++ b/feature_two/src/main/AndroidManifest.xml
@@ -2,4 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dev.wendyyanto.feature_two">
 
+    <application>
+
+        <activity android:name=".FeatureTwoActivity" />
+    </application>
 </manifest>
