feature: rename packages

--- a/feature_one/src/main/AndroidManifest.xml
+++ b/feature_one/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dev.wendyyanto.feature_one">
+    package="dev.wendyyanto.featureone">
 
     <application>
-        <activity android:name=".FeatureOneActivity" />
+        <activity android:name="dev.wendyyanto.featureone.FeatureOneActivity" />
     </application>
 </manifest>
